added some pictures and adjusted the index.html

--- a/src/index.html
+++ b/src/index.html
@@ -48,33 +48,24 @@
         <div class="menu-content">
             <div class="container">
                 <div class="row">
-                    <div class="navigation"> 
-                        <!-- <span class="pe-7s-left-arrow close-menu" id="close-button"></span> -->
+                    <div class="navigation">
+
                         <div class="menu-logo hidden-xs">
-                            <!-- <img src="img/menu_logo.png" alt="logo" /> -->
+
                             <h1 class='menu__title-text'>T.L. Hine</h1>
                             <h2 class="menu__title-subtext">Composer & Performer</h2>
                         </div>
-                    </div>  
+                    </div>
                     <div class="col-md-8 col-md-offset-2 col-xs-12">
                         <div class="col-md-6 col-sm-6">
                             <nav class="menu">
                                 <div class="menu-list">
                                     <ul>
                                         <li><a href="index.html">Home</a>
-                                            <!-- <ul class="subnav">
-                                                <li><a href="index.html">- Masonry</a></li>
-                                                <li><a href="index-3column.html">- 3 Column</a></li>
-                                                <li><a href="index-4column.html">- 4 Column</a></li>
-                                            </ul> -->
+
                                         </li>
                                         <li><a href="about.html">About</a></li>
-                                        <!-- <li class="trigger-sub-nav"><a href="#">Blog</a>
-                                            <ul class="subnav">
-                                                <li><a href="blog-masonry.html">- Masonry</a></li>
-                                                <li><a href="blog-3column.html">- 3 Column</a></li>
-                                            </ul>
-                                        </li> -->
+
                                         <li><a href="works.html">Works</a></li>
                                         <li><a href="performance.html">Performance</a></li>
                                         <li><a href="media.html">Watch & Listen</a></li>
@@ -87,7 +78,7 @@
                         <div class="col-md-6 col-sm-6 hidden-xs">
                             <div class="menu-contact-information">
                                 <span class="menu-email"><a href='mailto:tlhine@tlhine.com'>tlhine@tlhine.com</a></span>
-                                <!-- <span class="menu-tel">Tel: +011 136 8452<br /> +031 136 8452</span> -->
+
                                 <span class="menu-address">West Hartford<br/> Connecticut</span>
                                 <!-- Get social media links -->
                                 <div class="menu-social-icons">
@@ -110,7 +101,7 @@
         <div class="container">
             <div class="header__title-container">
                 <a href="index.html">
-                    <!-- <img src="img/logo.png" alt="logo" /> -->
+
                     <h1 class='header__title-text'>T.L. Hine</h1>
                     <h2 class="header__title-subtext">Composer & Performer</h2>
                 </a>
@@ -126,25 +117,18 @@
     <div class="container">
         <div class="row">
             <div class="portfolio-wrapper">
-                <!-- <div class="works-filter">
-                    <a href="javascript:void(0)" class="filter active" data-filter="mix">All</a>
-                    <a href="javascript:void(0)" class="filter" data-filter="branding">Branding</a>
-                    <a href="javascript:void(0)" class="filter" data-filter="web">Web</a>
-                    <a href="javascript:void(0)" class="filter" data-filter="art">Art</a>
-                    <a href="javascript:void(0)" class="filter" data-filter="logos">Logo</a>
-                </div> -->
+
                 <div id="work-grid" class="js-masonry">
                     <!-- Begin of Thumbs Portfolio -->
                     <div class="col-md-3 col-sm-3 col-xs-12 mix branding">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_1.jpg" alt="Portfolio Item">
+                            <img src="img/headshot-2.jpg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
                                         <a href="about.html">
                                             <span class="project-name">About</span>
-                                            <!-- <hr class="split-line">
-                                            <span class="category-description">Bio & Resume</span> -->
+
                                         </a>
                                     </div>
                                 </div>
@@ -159,8 +143,7 @@
                                     <div class="overlay-view">
                                         <a href="works.html">
                                             <span class="project-name">Works</span>
-                                            <!-- <hr class="split-line">
-                                            <span class="category-description">Compositions</span> -->
+
                                         </a>
                                     </div>
                                 </div>
@@ -169,14 +152,13 @@
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-12 mix art">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_3.jpg" alt="Portfolio Item">
+                            <img src="img/saxophone.png" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
                                         <a href="performance.html">
                                             <span class="project-name">Performance</span>
-                                            <!-- <hr class="split-line">
-                                            <span class="category-description">Branding Design</span> -->
+
                                         </a>
                                     </div>
                                 </div>
@@ -185,14 +167,13 @@
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-12 mix logos">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_4.jpg" alt="Portfolio Item">
+                            <img src="img/piano-hands.jpg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
                                         <a href="media.html">
                                             <span class="project-name">Listen & Watch</span>
-                                            <!-- <hr class="split-line">
-                                            <span class="category-description">Branding Design</span> -->
+
                                         </a>
                                     </div>
                                 </div>
@@ -201,14 +182,13 @@
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-12 mix logos">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_6.jpg" alt="Portfolio Item">
+                            <img src="img/piano-tuning.jpg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
                                         <a href="services.html">
                                             <span class="project-name">Services</span>
-                                            <!-- <hr class="split-line">
-                                            <span class="category-description">Branding Design</span> -->
+
                                         </a>
                                     </div>
                                 </div>
@@ -223,121 +203,17 @@
                                     <div class="overlay-view">
                                         <a href="contact.html">
                                             <span class="project-name">Contact</span>
-                                            <!-- <hr class="split-line">
-                                            <span class="category-description">Branding Design</span> -->
+
                                         </a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="col-md-3 col-sm-3 col-xs-12 mix art">
-                        <div class="img masonry-height">
-                            <img src="img/portfolio/image_5.jpg" alt="Portfolio Item">
-                            <div class="hover-overlay">
-                                <div class="hover-overlay-inner">
-                                    <div class="overlay-view">
-                                        <a href="single-project.html">
-                                            <span class="project-name">PROJECT NAME</span>
-                                            <hr class="split-line">
-                                            <span class="category-description">Branding Design</span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-3 col-xs-12 mix branding">
-                        <div class="img masonry-height">
-                            <img src="img/portfolio/image_8.jpg" alt="Portfolio Item">
-                            <div class="hover-overlay">
-                                <div class="hover-overlay-inner">
-                                    <div class="overlay-view">
-                                        <a href="single-project.html">
-                                            <span class="project-name">PROJECT NAME</span>
-                                            <hr class="split-line">
-                                            <span class="category-description">Branding Design</span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-3 col-xs-12 mix branding">
-                        <div class="img masonry-height">
-                            <img src="img/portfolio/image_11.jpg" alt="Portfolio Item">
-                            <div class="hover-overlay">
-                                <div class="hover-overlay-inner">
-                                    <div class="overlay-view">
-                                        <a href="single-project.html">
-                                            <span class="project-name">PROJECT NAME</span>
-                                            <hr class="split-line">
-                                            <span class="category-description">Branding Design</span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-3 col-xs-12 mix art">
-                        <div class="img masonry-height">
-                            <img src="img/portfolio/image_9.jpg" alt="Portfolio Item">
-                            <div class="hover-overlay">
-                                <div class="hover-overlay-inner">
-                                    <div class="overlay-view">
-                                        <a href="single-project.html">
-                                            <span class="project-name">PROJECT NAME</span>
-                                            <hr class="split-line">
-                                            <span class="category-description">Branding Design</span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-3 col-xs-12 mix branding">
-                        <div class="img masonry-height">
-                            <img src="img/portfolio/image_10.jpg" alt="Portfolio Item">
-                            <div class="hover-overlay">
-                                <div class="hover-overlay-inner">
-                                    <div class="overlay-view">
-                                        <a href="single-project.html">
-                                            <span class="project-name">PROJECT NAME</span>
-                                            <hr class="split-line">
-                                            <span class="category-description">Branding Design</span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-3 col-xs-12 mix logos">
-                        <div class="img masonry-height">
-                            <img src="img/portfolio/image_12.jpg" alt="Portfolio Item">
-                            <div class="hover-overlay">
-                                <div class="hover-overlay-inner">
-                                    <div class="overlay-view">
-                                        <a href="single-project.html">
-                                            <span class="project-name">PROJECT NAME</span>
-                                            <hr class="split-line">
-                                            <span class="category-description">Branding Design</span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                     </div>-->
+
                     <!-- End  of Thumbs Portfolio -->
                 </div>
-                <!-- <div class="load-more">
-                    <a href="javascript:void(0)" id="load-more">LOAD MORE</a>
-                    <div class="load-portfolio">
-                      <div class="loading">
-                        <span class="ball1"></span>
-                        <span class="ball2"></span>
-                      </div>
-                    </div>
-                </div> -->
+
             </div>
         </div>
     </div>
@@ -356,11 +232,9 @@
                             <li><a href="#">GOOGLE+</a></li>
                         </ul>
                     </div>
-                    <!-- <p>2015 © ARABELLA Portfolio Template. All rights Reserved.</p> -->
+
                 </div>
-                <!-- <span class="move-top">
-                    <a href="#top"><i class="pe-7s-angle-up"></i></a>
-                </span> -->
+
             </div>
         </div>
     </footer>
