added some youtube embeds. need more client info before continuing

--- a/src/media.html
+++ b/src/media.html
@@ -48,14 +48,14 @@
         <div class="menu-content">
             <div class="container">
                 <div class="row">
-                    <div class="navigation"> 
+                    <div class="navigation">
                         <!-- <span class="pe-7s-left-arrow close-menu" id="close-button"></span> -->
                         <div class="menu-logo hidden-xs">
                             <!-- <img src="img/menu_logo.png" alt="logo" /> -->
                             <h1 class='menu__title-text'>T.L. Hine</h1>
                             <h2 class="menu__title-subtext">Composer & Performer</h2>
                         </div>
-                    </div>  
+                    </div>
                     <div class="col-md-8 col-md-offset-2 col-xs-12">
                         <div class="col-md-6 col-sm-6">
                             <nav class="menu">
@@ -123,11 +123,20 @@
     </div>
         <div class="container">
             <div class="main-title">
-                <h1>ABOUT</h1>
+                <h1>MEDIA</h1>
                 <hr>
                 <!-- <span class="slogan">Enim ipsam voluptatem quia voluptas aspernatur</span> -->
             </div>
-            <div class="about-content margin-top">
+            <h1>Lituus Duo</h1>
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe width="1280" height="720" src="https://www.youtube.com/embed/videoseries?list=PLPSceqINhxSG-dx-B7fhBYsiz1q05Durr" frameborder="0" allowfullscreen></iframe>
+            </div>
+
+            <hr />
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe width="1280" height="720" src="https://www.youtube.com/embed/Z-dINxh5Dpk?list=PLPSceqINhxSEHZXrYVdJ5UiIz7L2Jpe5J" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <!-- <div class="about-content margin-top">
               <div class="row">
                   <div class="col-md-6">
                       <div class="content-history">
@@ -149,7 +158,7 @@
             </div>
         </div>
         <div class="container-fluid margin-top">
-            <div class="row">  
+            <div class="row">
                 <div class="clearfix">
                     <div class="col-md-6 col-sm-6 bg-yellow float-right">
                         <div class="half-part">
@@ -165,7 +174,7 @@
                     <div class="col-md-6 col-sm-6 bg-image" style="background-image: url(img/about_img_1.jpg)" >
                         <div class="half-part"></div>
                     </div>
-                </div> 
+                </div> -->
 
                 <!-- <div class="clearfix">
                     <div class="col-md-6 col-sm-6 bg-gray">
@@ -183,10 +192,10 @@
                                 <div class="tabs">
                                     <div class="tab" id="tab1C">
                                         <p>Expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter</p>
-                                    </div>                            
+                                    </div>
                                     <div class="tab" id="tab2C">
                                         <p><i><b>Expound the actual teachings of the great explorer of the truth</b></i>, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter</p>
-                                    </div>                            
+                                    </div>
                                     <div class="tab" id="tab3C">
                                         <p><b>Expound</b> the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter</p>
                                     </div>
@@ -200,7 +209,7 @@
                 </div>
             </div>
         </div>
-        
+
         <div class="seperate"></div>
         <footer>
             <div class="container">
