added some images, removed others

--- a/src/choral-works.html
+++ b/src/choral-works.html
@@ -48,33 +48,24 @@
         <div class="menu-content">
             <div class="container">
                 <div class="row">
-                    <div class="navigation"> 
-                        <!-- <span class="pe-7s-left-arrow close-menu" id="close-button"></span> -->
+                    <div class="navigation">
+                        <span class="pe-7s-left-arrow close-menu" id="close-button"></span>
                         <div class="menu-logo hidden-xs">
                             <!-- <img src="img/menu_logo.png" alt="logo" /> -->
                             <h1 class='menu__title-text'>T.L. Hine</h1>
                             <h2 class="menu__title-subtext">Composer & Performer</h2>
                         </div>
-                    </div>  
+                    </div>
                     <div class="col-md-8 col-md-offset-2 col-xs-12">
                         <div class="col-md-6 col-sm-6">
                             <nav class="menu">
                                 <div class="menu-list">
                                     <ul>
                                         <li class="trigger-sub-nav"><a href="index.html">Home</a>
-                                            <!-- <ul class="subnav">
-                                                <li><a href="index.html">- Masonry</a></li>
-                                                <li><a href="index-3column.html">- 3 Column</a></li>
-                                                <li><a href="index-4column.html">- 4 Column</a></li>
-                                            </ul> -->
+
                                         </li>
                                         <li><a href="about.html">About</a></li>
-                                        <!-- <li class="trigger-sub-nav"><a href="#">Blog</a>
-                                            <ul class="subnav">
-                                                <li><a href="blog-masonry.html">- Masonry</a></li>
-                                                <li><a href="blog-3column.html">- 3 Column</a></li>
-                                            </ul>
-                                        </li> -->
+
                                         <li><a href="works.html">Works</a></li>
                                         <li><a href="performance.html">Performance</a></li>
                                         <li><a href="media.html">Watch & Listen</a></li>
@@ -91,12 +82,11 @@
                                 <span class="menu-address">West Hartford<br/> Connecticut</span>
                                 <!-- Get social media links -->
                                 <div class="menu-social-icons">
-                                    <ul>
-                                        <li><a href="#"><span class="iconmoon-facebook"></span></a></li>
-                                        <li><a href="#"><span class="iconmoon-twitter"></span></a></li>
-                                        <li><a href="#"><span class="iconmoon-linkedin2"></span></a></li>
-                                        <li><a href="#"><span class="iconmoon-dribbble"></span></a></li>
-                                    </ul>
+                                  <ul>
+                                      <li><a href="#"><span class="iconmoon-facebook"></span></a></li>
+                                      <li><a href="#"><span class="iconmoon-twitter"></span></a></li>
+                                      <li><a href="#"><span class="iconmoon-linkedin2"></span></a></li>
+                                  </ul>
                                 </div>
                             </div>
                         </div>
@@ -123,21 +113,6 @@
         </div>
     </div>
     <div class="container">
-        <!-- <div class="margin-top single-portfolio">
-
-             <div class="owl-carousel single-portfolio-slider">
-                <div>
-                    <img src="img/single-portfolio/img_1.jpg" alt="Portfolio">
-                </div>
-                <div>
-                    <img src="img/single-portfolio/img_2.jpg" alt="Portfolio">
-                </div>
-            </div>
-             <div class="controls-portfolio">
-                <a class="prev-slide"><i class="pe-7s-angle-left"></i></a>
-                <a class="next-slide"><i class="pe-7s-angle-right"></i></a>
-            </div> 
-        </div> -->
         <div class="content-portfolio">
             <h1>Choral Works</h1>
             <hr>
@@ -210,19 +185,6 @@
                     <p>Description, price, and first page</p>
                     <!-- <a href="#" class="btn btn-1">VISIT PROJECT</a> -->
                 </div>
-                <!-- <div class="col-md-2 col-md-offset-1">
-                    <div class="portfolio-tags">
-                        <h6>TAGS:</h6>
-                        <ul>
-                            <li><a href="#">design</a></li>
-                            <li><a href="#">clean</a></li>
-                            <li><a href="#">minimalism</a></li>
-                            <li><a href="#">modern</a></li>
-                            <li><a href="#">ui/ux</a></li>
-                            <li><a href="#">business</a></li>
-                        </ul>
-                    </div>
-                </div> -->
             </div>
 
             <div class="row">
@@ -250,17 +212,6 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="portfolio-controls margin-top">
-            <div class="back-btn">
-                <a class="#" href="#"><i class="pe-7s-angle-left left"></i><span class="hidden-xs">Previous</span></a>
-            </div>
-            <div class="home-btn">
-                <a href="#"><i class="pe-7s-keypad"></i></a>
-            </div>
-            <div class="forward-btn">
-                <a class="" href="#"><i class="pe-7s-angle-right right"></i><span class="hidden-xs">Next</span></a>
-            </div>
-        </div> -->
     </div>
     <div class="seperate"></div>
     <footer>
@@ -272,16 +223,8 @@
                             <li><a href="#">FACEBOOK</a></li>
                             <li><a href="#">TWITTER</a></li>
                             <li><a href="#">LINKEDIN</a></li>
-                            <li><a href="#">DRIBBBLE</a></li>
-                            <li><a href="#">FLICKR</a></li>
-                            <li><a href="#">GOOGLE+</a></li>
                         </ul>
                     </div>
-                    <!-- <p>2015 © ARABELLA Portfolio Template. All rights Reserved.</p>
-                </div>
-                    <span class="move-top">
-                        <a href="#top"><i class="pe-7s-angle-up"></i></a>
-                    </span> -->
             </div>
         </div>
     </footer>
