--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
             <div class="container">
                 <div class="row">
                     <div class="navigation">
-
+                        <span class="pe-7s-left-arrow close-menu" id="close-button"></span>
                         <div class="menu-logo hidden-xs">
 
                             <h1 class='menu__title-text'>T.L. Hine</h1>
@@ -86,7 +86,6 @@
                                         <li><a href="#"><span class="iconmoon-facebook"></span></a></li>
                                         <li><a href="#"><span class="iconmoon-twitter"></span></a></li>
                                         <li><a href="#"><span class="iconmoon-linkedin2"></span></a></li>
-                                        <li><a href="#"><span class="iconmoon-dribbble"></span></a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -122,7 +121,7 @@
                     <!-- Begin of Thumbs Portfolio -->
                     <div class="col-md-3 col-sm-3 col-xs-12 mix branding">
                         <div class="img masonry-height">
-                            <img src="img/headshot-2.jpg" alt="Portfolio Item">
+                            <img src="img/headshot-2.jpg" alt="About Theodore Hine">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -137,7 +136,7 @@
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-12 mix web">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_2.jpg" alt="Portfolio Item">
+                            <img src="img/sheet-music.jpg" alt="Works and Compositions">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -152,7 +151,7 @@
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-12 mix art">
                         <div class="img masonry-height">
-                            <img src="img/saxophone.png" alt="Portfolio Item">
+                            <img src="img/saxophone.png" alt="Performances">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -167,7 +166,7 @@
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-12 mix logos">
                         <div class="img masonry-height">
-                            <img src="img/piano-hands.jpg" alt="Portfolio Item">
+                            <img src="img/piano-hands.jpg" alt="Audio and Video">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -182,7 +181,7 @@
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-12 mix logos">
                         <div class="img masonry-height">
-                            <img src="img/piano-tuning.jpg" alt="Portfolio Item">
+                            <img src="img/piano-tuning.jpg" alt="Services">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -197,7 +196,7 @@
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-12 mix branding">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_7.jpg" alt="Portfolio Item">
+                            <img src="img/laptop-with-notebook.jpeg" alt="Contact">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -227,9 +226,6 @@
                             <li><a href="#">FACEBOOK</a></li>
                             <li><a href="#">TWITTER</a></li>
                             <li><a href="#">LINKEDIN</a></li>
-                            <li><a href="#">DRIBBBLE</a></li>
-                            <li><a href="#">FLICKR</a></li>
-                            <li><a href="#">GOOGLE+</a></li>
                         </ul>
                     </div>
 
