--- a/src/about.html
+++ b/src/about.html
@@ -49,7 +49,7 @@
             <div class="container">
                 <div class="row">
                     <div class="navigation">
-
+                        <span class="pe-7s-left-arrow close-menu" id="close-button"></span>
                         <div class="menu-logo hidden-xs">
 
                             <h1 class='menu__title-text'>T.L. Hine</h1>
@@ -86,7 +86,6 @@
                                         <li><a href="#"><span class="iconmoon-facebook"></span></a></li>
                                         <li><a href="#"><span class="iconmoon-twitter"></span></a></li>
                                         <li><a href="#"><span class="iconmoon-linkedin2"></span></a></li>
-                                        <li><a href="#"><span class="iconmoon-dribbble"></span></a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -100,7 +99,7 @@
         <div class="container">
             <div class="header__title-container">
                 <a href="index.html">
-                    
+
                     <h1 class='header__title-text'>T.L. Hine</h1>
                     <h2 class="header__title-subtext">Composer & Performer</h2>
                 </a>
@@ -168,10 +167,7 @@
                             <ul>
                                 <li><a href="#">FACEBOOK</a></li>
                                 <li><a href="#">TWITTER</a></li>
-                                <li><a href="#">LINKEDIN</a></li>
-                                <li><a href="#">DRIBBBLE</a></li>
-                                <li><a href="#">FLICKR</a></li>
-                                <li><a href="#">GOOGLE+</a></li>
+                                <li><a href="#">LINKEDIN</a></li
                             </ul>
                         </div>
 
