--- a/src/media.html
+++ b/src/media.html
@@ -49,9 +49,9 @@
             <div class="container">
                 <div class="row">
                     <div class="navigation">
-                        <!-- <span class="pe-7s-left-arrow close-menu" id="close-button"></span> -->
+                        <span class="pe-7s-left-arrow close-menu" id="close-button"></span>
                         <div class="menu-logo hidden-xs">
-                            <!-- <img src="img/menu_logo.png" alt="logo" /> -->
+
                             <h1 class='menu__title-text'>T.L. Hine</h1>
                             <h2 class="menu__title-subtext">Composer & Performer</h2>
                         </div>
@@ -62,19 +62,9 @@
                                 <div class="menu-list">
                                     <ul>
                                         <li class="trigger-sub-nav"><a href="index.html">Home</a>
-                                            <!-- <ul class="subnav">
-                                                <li><a href="index.html">- Masonry</a></li>
-                                                <li><a href="index-3column.html">- 3 Column</a></li>
-                                                <li><a href="index-4column.html">- 4 Column</a></li>
-                                            </ul> -->
+
                                         </li>
                                         <li><a href="about.html">About</a></li>
-                                        <!-- <li class="trigger-sub-nav"><a href="#">Blog</a>
-                                            <ul class="subnav">
-                                                <li><a href="blog-masonry.html">- Masonry</a></li>
-                                                <li><a href="blog-3column.html">- 3 Column</a></li>
-                                            </ul>
-                                        </li> -->
                                         <li><a href="works.html">Works</a></li>
                                         <li><a href="performance.html">Performance</a></li>
                                         <li><a href="media.html">Watch & Listen</a></li>
@@ -91,12 +81,11 @@
                                 <span class="menu-address">West Hartford<br/> Connecticut</span>
                                 <!-- Get social media links -->
                                 <div class="menu-social-icons">
-                                    <ul>
-                                        <li><a href="#"><span class="iconmoon-facebook"></span></a></li>
-                                        <li><a href="#"><span class="iconmoon-twitter"></span></a></li>
-                                        <li><a href="#"><span class="iconmoon-linkedin2"></span></a></li>
-                                        <li><a href="#"><span class="iconmoon-dribbble"></span></a></li>
-                                    </ul>
+                                  <ul>
+                                      <li><a href="#"><span class="iconmoon-facebook"></span></a></li>
+                                      <li><a href="#"><span class="iconmoon-twitter"></span></a></li>
+                                      <li><a href="#"><span class="iconmoon-linkedin2"></span></a></li>
+                                  </ul>
                                 </div>
                             </div>
                         </div>
@@ -125,7 +114,7 @@
             <div class="main-title">
                 <h1>MEDIA</h1>
                 <hr>
-                <!-- <span class="slogan">Enim ipsam voluptatem quia voluptas aspernatur</span> -->
+
             </div>
             <h1>Lituus Duo</h1>
             <div class="embed-responsive embed-responsive-16by9">
@@ -136,76 +125,6 @@
             <div class="embed-responsive embed-responsive-16by9">
               <iframe width="1280" height="720" src="https://www.youtube.com/embed/Z-dINxh5Dpk?list=PLPSceqINhxSEHZXrYVdJ5UiIz7L2Jpe5J" frameborder="0" allowfullscreen></iframe>
             </div>
-            <!-- <div class="about-content margin-top">
-              <div class="row">
-                  <div class="col-md-6">
-                      <div class="content-history">
-                      <h1>Bio</h1>
-                      <hr>
-                          <p>
-                              T. L. Hine (b. 1979) is a published composer, multifaceted performer and certified educator currently residing in West Hartford, CT.
-                          </p>
-                      </div>
-                  </div>
-                  <div class="col-md-6">
-                      <div class="content-descriptin">
-                          <p>
-                              Media content from youtube/soundcloud
-                          </p>
-                      </div>
-                  </div>
-              </div>
-            </div>
-        </div>
-        <div class="container-fluid margin-top">
-            <div class="row">
-                <div class="clearfix">
-                    <div class="col-md-6 col-sm-6 bg-yellow float-right">
-                        <div class="half-part">
-                            <div class="box-content">
-                                <h4>Resume</h4>
-                                <hr>
-                                <p>
-                                    more description
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-sm-6 bg-image" style="background-image: url(img/about_img_1.jpg)" >
-                        <div class="half-part"></div>
-                    </div>
-                </div> -->
-
-                <!-- <div class="clearfix">
-                    <div class="col-md-6 col-sm-6 bg-gray">
-                        <div class="half-part">
-                            <div class="box-content">
-                                <h4>PROCESS OF WORK</h4>
-                                <hr>
-                                <div class="filter-tabs">
-                                    <ul>
-                                        <li><a class="active" id="tab1" href="javascript:void(0)" >VISION</a></li>
-                                        <li><a id="tab2" href="javascript:void(0)">PASSION</a></li>
-                                        <li><a id="tab3" href="javascript:void(0)">IDEAS</a></li>
-                                    </ul>
-                                </div>
-                                <div class="tabs">
-                                    <div class="tab" id="tab1C">
-                                        <p>Expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter</p>
-                                    </div>
-                                    <div class="tab" id="tab2C">
-                                        <p><i><b>Expound the actual teachings of the great explorer of the truth</b></i>, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter</p>
-                                    </div>
-                                    <div class="tab" id="tab3C">
-                                        <p><b>Expound</b> the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-sm-6 bg-image" style="background-image: url(img/about_img_2.jpg)">
-                        <div class="half-part"></div>
-                    </div>  -->
                 </div>
             </div>
         </div>
@@ -220,16 +139,11 @@
                                 <li><a href="#">FACEBOOK</a></li>
                                 <li><a href="#">TWITTER</a></li>
                                 <li><a href="#">LINKEDIN</a></li>
-                                <li><a href="#">DRIBBBLE</a></li>
-                                <li><a href="#">FLICKR</a></li>
-                                <li><a href="#">GOOGLE+</a></li>
                             </ul>
                         </div>
-                        <!-- <p>2015 © ARABELLA Portfolio Template. All rights Reserved.</p> -->
+
                     </div>
-                    <!-- <span class="move-top">
-                        <a href="#top"><i class="pe-7s-angle-up"></i></a>
-                    </span> -->
+
                 </div>
             </div>
         </footer>
