--- a/src/services.html
+++ b/src/services.html
@@ -48,7 +48,7 @@
               <div class="container">
                   <div class="row">
                       <div class="navigation">
-
+                          <span class="pe-7s-left-arrow close-menu" id="close-button"></span>
                           <div class="menu-logo hidden-xs">
 
                               <h1 class='menu__title-text'>T.L. Hine</h1>
@@ -81,12 +81,11 @@
                                   <span class="menu-address">West Hartford<br/> Connecticut</span>
                                   <!-- Get social media links -->
                                   <div class="menu-social-icons">
-                                      <ul>
-                                          <li><a href="#"><span class="iconmoon-facebook"></span></a></li>
-                                          <li><a href="#"><span class="iconmoon-twitter"></span></a></li>
-                                          <li><a href="#"><span class="iconmoon-linkedin2"></span></a></li>
-                                          <li><a href="#"><span class="iconmoon-dribbble"></span></a></li>
-                                      </ul>
+                                    <ul>
+                                        <li><a href="#"><span class="iconmoon-facebook"></span></a></li>
+                                        <li><a href="#"><span class="iconmoon-twitter"></span></a></li>
+                                        <li><a href="#"><span class="iconmoon-linkedin2"></span></a></li>
+                                    </ul>
                                   </div>
                               </div>
                           </div>
@@ -244,14 +243,11 @@
                 <div class="footer-wrapper">
                     <div class="footer-content">
                         <div class="social-media">
-                            <ul>
-                                <li><a href="#">FACEBOOK</a></li>
-                                <li><a href="#">TWITTER</a></li>
-                                <li><a href="#">LINKEDIN</a></li>
-                                <li><a href="#">DRIBBBLE</a></li>
-                                <li><a href="#">FLICKR</a></li>
-                                <li><a href="#">GOOGLE+</a></li>
-                            </ul>
+                          <ul>
+                              <li><a href="#">FACEBOOK</a></li>
+                              <li><a href="#">TWITTER</a></li>
+                              <li><a href="#">LINKEDIN</a></li>
+                          </ul>
                         </div>
 
                     </div>
