--- a/src/works.html
+++ b/src/works.html
@@ -123,6 +123,11 @@
     </div>
     <!-- Masonry portfolio -->
     <div class="container">
+      <div class="main-title">
+          <h1>WORKS</h1>
+          <hr>
+      </div>
+
         <div class="row">
             <div class="portfolio-wrapper">
                 <div class="works-filter">
@@ -665,6 +670,16 @@
                             </div>
                         </div>
                      </div>
+
+                     <div class="col-md-12 bg-yellow">
+                         <div class="half-part">
+                             <div class="box-content">
+                                 <h4>Please <a href="mailto:tlhine@tlhine.com">contact me</a> to purchase works.</h4>
+                                 <hr>
+
+                             </div>
+                         </div>
+                     </div>
                     <!-- End  of Thumbs Portfolio -->
                 </div>
                 <!-- <div class="load-more">
@@ -689,12 +704,9 @@
                             <li><a href="#">FACEBOOK</a></li>
                             <li><a href="#">TWITTER</a></li>
                             <li><a href="#">LINKEDIN</a></li>
-                            <li><a href="#">DRIBBBLE</a></li>
-                            <li><a href="#">FLICKR</a></li>
-                            <li><a href="#">GOOGLE+</a></li>
                         </ul>
                     </div>
-                    <!-- <p>2015 © ARABELLA Portfolio Template. All rights Reserved.</p> -->
+
                 </div>
                 <!-- <span class="move-top">
                     <a href="#top"><i class="pe-7s-angle-up"></i></a>
